@@ -39,6 +39,17 @@ import java.util.function.IntFunction;
  *      Vector64ConversionTests
  */
 
+/*
+ * @test VectorConversionPPC64
+ * @bug 8256479
+ * @requires os.arch =="ppc64" | os.arch == "ppc64le"
+ * @summary VectorConversion on PPC64 without Vector Register usage
+ * @modules jdk.incubator.vector
+ * @modules java.base/jdk.internal.vm.annotation
+ * @run testng/othervm  -XX:-SuperwordUseVSX -XX:-TieredCompilation --add-opens jdk.incubator.vector/jdk.incubator.vector=ALL-UNNAMED
+ * Vector64ConversionTests
+ */
+
 @Test
 public class Vector64ConversionTests extends AbstractVectorConversionTest {
 
