@@ -23,14 +23,14 @@
 
 /*
  * @test
- * @bug 8153716 8143955 8151754 8150382 8153920 8156910 8131024 8160089 8153897 8167128 8154513 8170015 8170368 8172102 8172103  8165405 8173073 8173848 8174041 8173916 8174028 8174262 8174797 8177079 8180508 8177466 8172154 8192979 8191842 8198573 8198801 8210596 8210959 8215099 8199623 8236715 8239536 8247456
+ * @bug 8153716 8143955 8151754 8150382 8153920 8156910 8131024 8160089 8153897 8167128 8154513 8170015 8170368 8172102 8172103  8165405 8173073 8173848 8174041 8173916 8174028 8174262 8174797 8177079 8180508 8177466 8172154 8192979 8191842 8198573 8198801 8210596 8210959 8215099 8199623 8236715 8239536 8247456 8246774
  * @summary Simple jshell tool tests
  * @modules jdk.compiler/com.sun.tools.javac.api
  *          jdk.compiler/com.sun.tools.javac.main
  *          jdk.jdeps/com.sun.tools.javap
  *          jdk.jshell/jdk.internal.jshell.tool
  * @build KullaTesting TestingInputStream
- * @run testng/othervm ToolSimpleTest
+ * @run testng ToolSimpleTest
  */
 
 import java.util.ArrayList;
@@ -917,7 +917,7 @@ public class ToolSimpleTest extends ReplToolTesting {
 
     @Test
     public void testRecords() {
-        test(new String[] {"--enable-preview"},
+        test(new String[] {},
                 (a) -> assertCommandOutputContains(a, "record R(int i) { public int g() { return j; } }",
                         "|  created record R, however, it cannot be instantiated or its methods invoked until variable j is declared"),
                 (a) -> assertCommandOutputContains(a, "new R(0)",
