@@ -23,7 +23,7 @@
 
 /*
  * @test
- * @bug      7151010 8006547 8007766 8029017
+ * @bug      7151010 8006547 8007766 8029017 8246774
  * @summary  Default test cases for running combinations for Target values
  * @modules jdk.compiler
  * @build    Helper
@@ -204,25 +204,22 @@ public class TargetAnnoCombo {
         }
     }
 
-    // options to be passed if all targets, including RECORD_COMPONENTS, are to be considered
-    List<String> previewOptions = List.of(
-            "--enable-preview",
-            "-source", Integer.toString(Runtime.version().feature())
-    );
+    // options to be passed if target RECORD_COMPONENT can't be considered
+    List<String> source8 = List.of("-source", "8");
 
     private void generate() {
         // Adding test cases to run.
         testCases.addAll(Arrays.asList(
                 // No base target against no container target.
-                new TestCase(noSet, noSet),
+    /*  0*/     new TestCase(noSet, noSet),
                 // No base target against empty container target.
-                new TestCase(noSet, empty),
+    /*  1*/     new TestCase(noSet, empty),
                 // No base target against TYPE_USE only container target.
-                new TestCase(noSet, less(jdk8, TYPE_PARAMETER)),
+                new TestCase(noSet, less(jdk8, TYPE_PARAMETER), source8),
                 // No base target against TYPE_PARAMETER only container target.
-                new TestCase(noSet, less(jdk8, TYPE_USE)),
+                new TestCase(noSet, less(jdk8, TYPE_USE), source8),
                 // No base target against TYPE_USE + TYPE_PARAMETER only container target.
-                new TestCase(noSet, jdk8),
+                new TestCase(noSet, jdk8, source8),
                 // No base target against TYPE_USE + some selection of jdk7 targets.
                 new TestCase(noSet,
                 plus(EnumSet.range(TYPE, LOCAL_VARIABLE), TYPE_USE)),
@@ -233,7 +230,7 @@ public class TargetAnnoCombo {
                 new TestCase(noSet, plus(empty, TYPE)),
                 new TestCase(noSet, plus(empty, PARAMETER)),
                 new TestCase(noSet, plus(empty, PACKAGE)),
-                new TestCase(noSet, plus(empty, METHOD)),
+    /*  10*/    new TestCase(noSet, plus(empty, METHOD)),
                 new TestCase(noSet, plus(empty, LOCAL_VARIABLE)),
                 new TestCase(noSet, plus(empty, FIELD)),
                 new TestCase(noSet, plus(empty, CONSTRUCTOR)),
@@ -246,32 +243,32 @@ public class TargetAnnoCombo {
                 new TestCase(empty, plus(empty, TYPE)),
                 new TestCase(empty, plus(empty, PARAMETER)),
                 new TestCase(empty, plus(empty, PACKAGE)),
-                new TestCase(empty, plus(empty, METHOD)),
+    /*  20*/    new TestCase(empty, plus(empty, METHOD)),
                 new TestCase(empty, plus(empty, LOCAL_VARIABLE)),
                 new TestCase(empty, plus(empty, FIELD)),
                 new TestCase(empty, plus(empty, CONSTRUCTOR)),
                 new TestCase(empty, plus(empty, ANNOTATION_TYPE)),
-                new TestCase(empty, less(jdk8, TYPE_USE)),
-                new TestCase(empty, less(jdk8, TYPE_PARAMETER)),
+                new TestCase(empty, less(jdk8, TYPE_USE), source8),
+                new TestCase(empty, less(jdk8, TYPE_PARAMETER), source8),
                 // No container target against all all-but one jdk7 targets.
-                new TestCase(less(jdk7, TYPE), noSet),
-                new TestCase(less(jdk7, PARAMETER), noSet),
-                new TestCase(less(jdk7, PACKAGE), noSet),
-                new TestCase(less(jdk7, METHOD), noSet),
-                new TestCase(less(jdk7, LOCAL_VARIABLE), noSet),
-                new TestCase(less(jdk7, FIELD), noSet),
-                new TestCase(less(jdk7, CONSTRUCTOR), noSet),
-                new TestCase(less(jdk7, ANNOTATION_TYPE), noSet),
+                new TestCase(less(jdk7, TYPE), noSet, source8),
+                new TestCase(less(jdk7, PARAMETER), noSet, source8),
+                new TestCase(less(jdk7, PACKAGE), noSet, source8),
+    /*  30*/    new TestCase(less(jdk7, METHOD), noSet, source8),
+                new TestCase(less(jdk7, LOCAL_VARIABLE), noSet, source8),
+                new TestCase(less(jdk7, FIELD), noSet, source8),
+                new TestCase(less(jdk7, CONSTRUCTOR), noSet, source8),
+                new TestCase(less(jdk7, ANNOTATION_TYPE), noSet, source8),
                 // No container against all but TYPE and ANNOTATION_TYPE
                 new TestCase(less(jdk7, TYPE, ANNOTATION_TYPE), noSet),
                 // No container against jdk7 targets.
-                new TestCase(jdk7, noSet),
+                new TestCase(jdk7, noSet, source8),
                 // No container against jdk7 targets plus one or both of TYPE_USE, TYPE_PARAMETER
-                new TestCase(plus(jdk7, TYPE_USE), noSet),
-                new TestCase(plus(jdk7, TYPE_PARAMETER), noSet),
-                new TestCase(allTargets, noSet, previewOptions),
+                new TestCase(plus(jdk7, TYPE_USE), noSet, source8),
+                new TestCase(plus(jdk7, TYPE_PARAMETER), noSet, source8),
+                new TestCase(allTargets, noSet, null),
                 // Empty container target against any lone target.
-                new TestCase(plus(empty, TYPE), empty),
+    /*  40*/    new TestCase(plus(empty, TYPE), empty),
                 new TestCase(plus(empty, PARAMETER), empty),
                 new TestCase(plus(empty, PACKAGE), empty),
                 new TestCase(plus(empty, METHOD), empty),
@@ -282,34 +279,34 @@ public class TargetAnnoCombo {
                 new TestCase(plus(empty, TYPE_USE), empty),
                 new TestCase(plus(empty, TYPE_PARAMETER), empty),
                 // All base targets against all container targets.
-                new TestCase(allTargets, allTargets, previewOptions),
+    /*  50*/    new TestCase(allTargets, allTargets),
                 // All base targets against all but one container targets.
-                new TestCase(allTargets, less(allTargets, TYPE), previewOptions),
-                new TestCase(allTargets, less(allTargets, PARAMETER), previewOptions),
-                new TestCase(allTargets, less(allTargets, PACKAGE), previewOptions),
-                new TestCase(allTargets, less(allTargets, METHOD), previewOptions),
-                new TestCase(allTargets, less(allTargets, LOCAL_VARIABLE), previewOptions),
-                new TestCase(allTargets, less(allTargets, FIELD), previewOptions),
-                new TestCase(allTargets, less(allTargets, CONSTRUCTOR), previewOptions),
-                new TestCase(allTargets, less(allTargets, ANNOTATION_TYPE), previewOptions),
-                new TestCase(allTargets, less(allTargets, TYPE_USE), previewOptions),
-                new TestCase(allTargets, less(allTargets, TYPE_PARAMETER), previewOptions),
+                new TestCase(allTargets, less(allTargets, TYPE)),
+                new TestCase(allTargets, less(allTargets, PARAMETER)),
+                new TestCase(allTargets, less(allTargets, PACKAGE)),
+                new TestCase(allTargets, less(allTargets, METHOD)),
+                new TestCase(allTargets, less(allTargets, LOCAL_VARIABLE)),
+                new TestCase(allTargets, less(allTargets, FIELD)),
+                new TestCase(allTargets, less(allTargets, CONSTRUCTOR)),
+                new TestCase(allTargets, less(allTargets, ANNOTATION_TYPE)),
+                new TestCase(allTargets, less(allTargets, TYPE_USE)),
+    /*  60*/    new TestCase(allTargets, less(allTargets, TYPE_PARAMETER)),
                 // All container targets against all but one base targets.
-                new TestCase(less(allTargets, TYPE), allTargets, previewOptions),
-                new TestCase(less(allTargets, PARAMETER), allTargets, previewOptions),
-                new TestCase(less(allTargets, PACKAGE), allTargets, previewOptions),
-                new TestCase(less(allTargets, METHOD), allTargets, previewOptions),
-                new TestCase(less(allTargets, LOCAL_VARIABLE), allTargets, previewOptions),
-                new TestCase(less(allTargets, FIELD), allTargets, previewOptions),
-                new TestCase(less(allTargets, CONSTRUCTOR), allTargets, previewOptions),
-                new TestCase(less(allTargets, ANNOTATION_TYPE), allTargets, previewOptions),
-                new TestCase(less(allTargets, TYPE_USE), allTargets, previewOptions),
-                new TestCase(less(allTargets, TYPE_PARAMETER), allTargets, previewOptions)));
+                new TestCase(less(allTargets, TYPE), allTargets),
+                new TestCase(less(allTargets, PARAMETER), allTargets),
+                new TestCase(less(allTargets, PACKAGE), allTargets),
+                new TestCase(less(allTargets, METHOD), allTargets),
+                new TestCase(less(allTargets, LOCAL_VARIABLE), allTargets),
+                new TestCase(less(allTargets, FIELD), allTargets),
+                new TestCase(less(allTargets, CONSTRUCTOR), allTargets),
+                new TestCase(less(allTargets, ANNOTATION_TYPE), allTargets),
+                new TestCase(less(allTargets, TYPE_USE), allTargets),
+    /*  70*/    new TestCase(less(allTargets, TYPE_PARAMETER), allTargets)));
         // Generates 100 test cases for any lone base target contained in Set
         // allTargets against any lone container target.
         for (ElementType b : allTargets) {
             for (ElementType c : allTargets) {
-                testCases.add(new TestCase(plus(empty, b), plus(empty, c), previewOptions));
+                testCases.add(new TestCase(plus(empty, b), plus(empty, c)));
             }
         }
     }
@@ -456,7 +453,7 @@ public class TargetAnnoCombo {
                 if (allDiagnostics.stream().noneMatch(d -> d.getKind() == javax.tools.Diagnostic.Kind.ERROR)) {
                     ok = true;
                 } else {
-                    errMesg = "Test failed, compiled unexpectedly.";
+                    errMesg = "Test failed, should have compiled successfully.";
                     ok = false;
                 }
             } else {
